--- a/themes/tatemeatworks/static/scss/components/_order-online-block.scss
+++ b/themes/tatemeatworks/static/scss/components/_order-online-block.scss
@@ -9,6 +9,10 @@
         font-size: 1.1rem;
         padding: 1rem;
     }
+
+    @media screen and (max-width: 780px) {
+        min-width: 0;
+    }
 }
 
 .order-online-header {
